<resources>
    <string name="app_name">Host</string>
    <string name="top_level_greeting">Welcome to Host. Please select from the options below:</string>
    <string name="host_button_text">Begin Hosting an Event</string>
    <string name="join_button_text">Join an existing event</string>
    <string name="create_new_menu_text">Create New Menu</string>
    <string name="select_menu_text">Select Menu</string>
    <string name="begin_hosting_text">Begin Hosting</string>
    <string name="disconnect">Disconnected</string>
    <string name="error_connect">Error: Check Connection</string>
    <string name="menu_header">MENU</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_pin_prompt">Enter PIN</string>
    <string name="menu_form_name_text">Menu Name</string>
    <string name="menu_form_header_text">Add Menu</string>
    <string name="submit_menu_form_text">Create New Menu</string>
    <string name="add_menu_item_text">Add Item</string>

    <!-- Extras -->
    <string name="EXTRA_MENU_NAME">com.paynerg.host.extra.MENU_NAME</string>
    <string name="menu_item_form_name_text">Name</string>
    <string name="menu_item_form_description_text">Description</string>
    <string name="submit_menu_item_form_text">Add Menu Item</string>
    <string name="menu_item_form_header_text">New Menu Item</string>
</resources>